@@ -1,5 +1,17 @@
 2012-10-01  Ryosuke Niwa  <rniwa@webkit.org>
 
+        PerfTestRunner: Move all functions into the closure and always use double quotation for string literals
+        https://bugs.webkit.org/show_bug.cgi?id=98093
+
+        Reviewed by Ojan Vafai.
+
+        Move all methods of PerfTestRunner into the closure that defines it.
+        Also always use double quotations for string literals for consistency.
+
+        * resources/runner.js:
+
+2012-10-01  Ryosuke Niwa  <rniwa@webkit.org>
+
         Encapsulate private properties in PerfTestRunner better
         https://bugs.webkit.org/show_bug.cgi?id=97833
 
